<resources>
    <string name="app_name">BrFlix</string>
    <string name="Login">Login</string>
    <string name="Register">Registro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Hellowelcome">Olá, seja bem vindo!</string>
    <string name="Email">Email</string>
    <string name="Password">Senha</string>
    <string name="forgotpassword">Esqueci a senha</string>
    <string name="entre_com_sua_conta_google">Entre com sua conta Google</string>
    <string name="cadastre_se_e_confira_o_melhor_do_cinema_nacional">Cadastre-se e confira o melhor do cinema nacional</string>
</resources>